objects/project_cloud__Stage_Gate_Process_Step__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Archive_Date__c</fullName>
        <description>The date of when the step was set to be archived</description>
        <label>Archive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Description__c</fullName>
        <description>A more in detail description of the Gate Process Step</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>project_cloud__Position__c</fullName>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Stage_Gate_Process__c</fullName>
        <label>Stage Gate Process</label>
        <referenceTo>project_cloud__Stage_Gate_Process__c</referenceTo>
        <relationshipLabel>Stage Gate Process Steps</relationshipLabel>
        <relationshipName>Stage_Gate_Process_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>project_cloud__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>project_cloud__Process_Step_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>project_cloud__Total_Checklist_Items__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Checklist Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Stage Gate Process Step</label>
    <nameField>
        <label>Stage Gate Process Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stage Gate Process Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>